2011-10-14  Peter Beverloo  <peter@chromium.org>

        [Chromium] Inherit settings from Chromium's envsetup.sh, address a NDK todo
        https://bugs.webkit.org/show_bug.cgi?id=70028

        Reviewed by Adam Barth.

        * Scripts/update-webkit-chromium:
        * Scripts/webkitdirs.pm:
        (buildChromiumMakefile):
        (buildChromium):

2011-10-14  Leandro Pereira  <leandro@profusion.mobi>

        Unreviewed; add missing #includes.

        * DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
        * DumpRenderTree/efl/EventSender.cpp:

2011-10-14  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] Correctly get the absolute URL in LayoutTestController::queueLoad()
        https://bugs.webkit.org/show_bug.cgi?id=69770

        Reviewed by Antonio Gomes.

        We were just appending the given URL to the absolute URI of the main
        frame, which resulted in "file:///foo/bar/baz.htmltheother/url.html"
        instead of "file:///foo/bar/theother/url.html".

        This should make fast/dom/navigation-type-navigate.html behave
        better (it still fails, but later).

        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
        (LayoutTestController::queueLoad):

2011-10-13  Arko Saha  <arko@motorola.com>

        Microdata: Basic implementation of document.getItems() method.
        https://bugs.webkit.org/show_bug.cgi?id=68610

        Reviewed by Ryosuke Niwa.

        Added ENABLE(MICRODATA) feature flag. Implement document.getItems() DOM API.
        Spec : http://www.whatwg.org/specs/web-apps/current-work/complete/microdata.html

        * Scripts/build-webkit:

2011-10-14  Csaba Osztrogonác  <ossy@webkit.org>

        new-run-webkit-tests does not support qt-4.8 results
        https://bugs.webkit.org/show_bug.cgi?id=64071

        Roll-back second part of r97252. :)

        * Scripts/webkitpy/layout_tests/port/qt.py:

2011-10-14  Raphael Kubo da Costa  <kubo@profusion.mobi>
