@@ -1,8 +1,6 @@
 {
     "slaves":     [ { "name": "test-slave", "platform": "*" },
 
-                    { "name": "apple-xserve-1", "platform": "mac-leopard" },
-                    { "name": "apple-macpro-7", "platform": "mac-leopard" },	
                   
                     { "name": "apple-xserve-4", "platform": "mac-snowleopard" },
                     { "name": "apple-xserve-5", "platform": "mac-snowleopard" },
@@ -72,16 +70,7 @@
                     { "name": "hfreyther-mipsel-linux1", "platform": "qt"}
                   ],
 
-    "builders":   [ { "name": "Leopard Intel Debug (Build)", "type": "Build", "builddir": "leopard-intel-debug",
-                      "platform": "mac-leopard", "configuration": "debug", "architectures": ["i386"],
-                      "triggers": ["leopard-intel-debug-tests"],
-                      "slavenames": ["apple-xserve-1"]
-                    },
-                    { "name": "Leopard Intel Debug (Tests)", "type": "Test", "builddir": "leopard-intel-debug-tests",
-                      "platform": "mac-leopard", "configuration": "debug", "architectures": ["i386"],
-                      "slavenames": ["apple-macpro-7"]
-                    },
-                    { "name": "SnowLeopard Intel Release (Build)", "type": "Build", "builddir": "snowleopard-intel-release",
+    "builders":   [ { "name": "SnowLeopard Intel Release (Build)", "type": "Build", "builddir": "snowleopard-intel-release",
                       "platform": "mac-snowleopard", "configuration": "release", "architectures": ["x86_64"],
                       "triggers": ["snowleopard-intel-release-tests", "snowleopard-intel-release-tests-wk2"],
                       "slavenames": ["apple-xserve-4", "test-slave"]
@@ -278,9 +267,6 @@
                                        "Chromium Linux Release", "Chromium Linux Release (Tests)", "Chromium Linux Release (Flexbox)",
                                        "Chromium Android Release", "WinCairo Release", "WinCE Release (Build)", "EFL Linux Release (Build)"]
                     },
-                    { "type": "PlatformSpecificScheduler", "platform": "mac-leopard", "branch": "trunk", "treeStableTimer": 45.0,
-                      "builderNames": ["Leopard Intel Debug (Build)"]
-                    },
                     { "type": "PlatformSpecificScheduler", "platform": "mac-snowleopard", "branch": "trunk", "treeStableTimer": 45.0, 
                       "builderNames": ["SnowLeopard Intel Release (Build)", "SnowLeopard Intel Leaks", "SnowLeopard Intel Debug (Build)"] 
                     },
@@ -301,9 +287,6 @@
                     },
                     { "type": "Triggerable", "name": "lion-intel-debug-tests-wk2",
                       "builderNames": ["Lion Intel Debug (WebKit2 Tests)"]
-                    },
-                    { "type": "Triggerable", "name": "leopard-intel-debug-tests",
-                      "builderNames": ["Leopard Intel Debug (Tests)"]
                     },
                     { "type": "Triggerable", "name": "snowleopard-intel-release-tests",
                       "builderNames": ["SnowLeopard Intel Release (Tests)"]
